# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/ace/ace_engine/frameworks/core/components/components.gni")

build_component("svg") {
  sources = [
    "flutter_render_svg.cpp",
    "flutter_render_svg_circle.cpp",
    "flutter_render_svg_ellipse.cpp",
    "flutter_render_svg_fe_colormatrix.cpp",
    "flutter_render_svg_fe_gaussianblur.cpp",
    "flutter_render_svg_fe_offset.cpp",
    "flutter_render_svg_filter.cpp",
    "flutter_render_svg_g.cpp",
    "flutter_render_svg_line.cpp",
    "flutter_render_svg_mask.cpp",
    "flutter_render_svg_path.cpp",
    "flutter_render_svg_pattern.cpp",
    "flutter_render_svg_polygon.cpp",
    "flutter_render_svg_rect.cpp",
    "flutter_render_svg_text.cpp",
    "flutter_render_svg_text_path.cpp",
    "flutter_render_svg_tspan.cpp",
    "flutter_render_svg_use.cpp",
    "parse/svg_animation.cpp",
    "parse/svg_circle.cpp",
    "parse/svg_clip_path.cpp",
    "parse/svg_dom.cpp",
    "parse/svg_ellipse.cpp",
    "parse/svg_fe_colormatrix.cpp",
    "parse/svg_fe_gaussianblur.cpp",
    "parse/svg_fe_offset.cpp",
    "parse/svg_filter.cpp",
    "parse/svg_g.cpp",
    "parse/svg_gradient.cpp",
    "parse/svg_line.cpp",
    "parse/svg_mask.cpp",
    "parse/svg_node.cpp",
    "parse/svg_path.cpp",
    "parse/svg_pattern.cpp",
    "parse/svg_polygon.cpp",
    "parse/svg_rect.cpp",
    "parse/svg_stop.cpp",
    "parse/svg_style.cpp",
    "parse/svg_svg.cpp",
    "parse/svg_use.cpp",
    "render_svg.cpp",
    "render_svg_base.cpp",
    "render_svg_circle.cpp",
    "render_svg_ellipse.cpp",
    "render_svg_fe.cpp",
    "render_svg_fe_colormatrix.cpp",
    "render_svg_fe_gaussianblur.cpp",
    "render_svg_fe_offset.cpp",
    "render_svg_filter.cpp",
    "render_svg_g.cpp",
    "render_svg_line.cpp",
    "render_svg_mask.cpp",
    "render_svg_path.cpp",
    "render_svg_pattern.cpp",
    "render_svg_polygon.cpp",
    "render_svg_rect.cpp",
    "render_svg_text.cpp",
    "render_svg_text_path.cpp",
    "render_svg_use.cpp",
    "svg_circle_component.cpp",
    "svg_component.cpp",
    "svg_ellipse_component.cpp",
    "svg_fe_colormatrix_component.cpp",
    "svg_fe_gaussianblur_component.cpp",
    "svg_fe_offset_component.cpp",
    "svg_filter_component.cpp",
    "svg_g_component.cpp",
    "svg_line_component.cpp",
    "svg_mask_component.cpp",
    "svg_path_component.cpp",
    "svg_pattern_component.cpp",
    "svg_polygon_component.cpp",
    "svg_rect_component.cpp",
    "svg_text_component.cpp",
    "svg_text_path_component.cpp",
    "svg_transform.cpp",
    "svg_tspan_component.cpp",
    "svg_use_component.cpp",
  ]
}
