# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/ace/ace_engine/frameworks/core/components/components.gni")

if (is_standard_system && !use_mingw_win && !use_mac) {
  config("ohos_web_config") {
    include_dirs = [
      "//utils/native/base/include",
      "//foundation/windowmanager/interfaces/innerkits/wm",
      "//foundation/web/webview/interfaces/innerkits/ohos_webview",
      "//foundation/aafwk/standard/frameworks/kits/appkit/native/app/include",
    ]
  }
}

build_component("web") {
  sources = [
    "flutter_render_web.cpp",
    "render_web.cpp",
    "render_web_creator.cpp",
    "resource/web_client_impl.cpp",
    "resource/web_delegate.cpp",
    "resource/web_resource.cpp",
    "web_component.cpp",
    "web_element.cpp",
  ]
  rosen_sources = [ "rosen_render_web.cpp" ]

  if (is_standard_system && !use_mingw_win && !use_mac) {
    configs = [ ":ohos_web_config" ]
    deps = [
      "//foundation/aafwk/standard/frameworks/kits/appkit:appkit_native",
      "//foundation/web/webview/ohos_webview:libwebview",
      "//foundation/windowmanager/utils:libwmutil",
      "//foundation/windowmanager/wm:libwm",
    ]
  }
}
