# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ace/ace_engine/ace_config.gni")

ohos_shared_library("router") {
  include_dirs = [
    "//foundation/ace",
    "$ace_root",
    "$ace_root/frameworks",
    "$root_out_dir/ace/framework",
  ]

  sources = [ "js_router.cpp" ]

  deps = [
    "$ace_root/build:libace",
    "//foundation/ace/napi/:ace_napi",
  ]

  relative_install_dir = "module"

  subsystem_name = "ace"
  part_name = ace_engine_part
}
