# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/ace/ace_engine/build/ace_gen_sa_dialog_js.gni")

gen_sa_dialog_js("dialog_picker_js_files_etc") {
  project_path = "//foundation/ace/ace_engine/services/uiservice/dialog_ui/dialog_picker/js"
  i18n_files = [
    "i18n/en-US.json",
    "i18n/zh-CN.json",
  ]
  common_files = []
  dialog_name = "dialog_picker_service"
  part_name = "ace_engine_standard"
  subsystem_name = "ace"
}
